--- a/documentation/layout/layout-customlayout.asciidoc
+++ b/documentation/layout/layout-customlayout.asciidoc
@@ -38,18 +38,18 @@ custom layout HTML-files must be saved using UTF-8 character encoding.
       &lt;table align="center"&gt;
         &lt;tr&gt;
           &lt;td align="right"&gt;User&amp;nbsp;name:&lt;/td&gt;
-          &lt;td&gt;**&lt;div data-location="username"&gt;&lt;/div&gt;**&lt;/td&gt;
+          &lt;td&gt;**&lt;div location="username"&gt;&lt;/div&gt;**&lt;/td&gt;
         &lt;/tr&gt;
         &lt;tr&gt;
           &lt;td align="right"&gt;Password:&lt;/td&gt;
-          &lt;td&gt;**&lt;div data-location="password"&gt;&lt;/div&gt;**&lt;/td&gt;
+          &lt;td&gt;**&lt;div location="password"&gt;&lt;/div&gt;**&lt;/td&gt;
         &lt;/tr&gt;
       &lt;/table&gt;
     &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
     &lt;td align="right" colspan="2"&gt;
-      **&lt;div data-location="okbutton"&gt;**&lt;/div&gt;
+      **&lt;div location="okbutton"&gt;**&lt;/div&gt;
     &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/table&gt;
