--- a/documentation/advanced/advanced-dragndrop.asciidoc
+++ b/documentation/advanced/advanced-dragndrop.asciidoc
@@ -145,11 +145,12 @@ compatible browser, such as Mozilla Firefox 3.6 or newer.
 
 == Drag and Drop Rows in Grid
 
-It is possible to drag and drop the rows of a Grid component allowing reordering of rows, dragging rows between different Grids, dragging rows outside of a Grid or dropping elements onto rows.
+It is possible to drag and drop the rows of a Grid component. This allows reordering of rows, dragging rows between different Grids, dragging rows outside of a Grid or dropping elements onto rows.
 
-=== Grid Drag Source
+=== Grid as a Drag Source
 
-A Grid component's rows can be made draggable by applying [classname]#GridDragSource# extension to the component.
+A Grid component's rows can be made draggable by applying [classname]#GridDragSource# extension to the component. The extended Grid's rows become draggable, meaning that each row can be grabbed and moved by the mouse individually.
+When the Grid's selection mode is `SelectionMode.MULTI` and multiple rows are selected, it is possible to drag all the visible selected rows by grabbing one of them. However, when the grabbed row is not selected, only that one row will be dragged.
 
 You can define the allowed effects and provide a drag data generator.
 
@@ -162,19 +163,19 @@ GridDragSource<Bean> dragSource = new GridDragSource<>(dragSourceComponent);
 // set allowed effects
 dragSource.setEffectAllowed(EffectAllowed.MOVE);
 // set the drag data generator
-dragSource.setDragDataGenerator(bean -> {
+dragSource.setDragDataGenerator(item -> {
     JsonObject ret = Json.createObject();
-    ret.put("beanId", bean.getId());
-    ret.put("beanValue", bean.getValue());
+    ret.put("beanId", item.getId());
+    ret.put("beanValue", item.getValue());
     return ret;
 });
 ----
 
-The _drag data generator_ defines what data should be transferred when a row is dragged and dropped. The generator is executed for every inserted item and returns a `JsonObject` containing the data to be transferred for that item.
+The _drag data generator_ defines what data should be transferred when a row is dragged and dropped. The generator is executed for every inserted item and returns a `JsonObject` containing the data to be transferred for that item. The generated data is transferred as a JSON array using the HTML5 DataTransfer's data parameter of type `"text"`.
 
 [NOTE]
 ====
-Note that setting the data transfer text is not supported.
+Note that calling the `setDataTransferText(String data)` method is not supported.
 ====
 
 The [classname]#GridDragStartEvent# is fired when dragging a row has started, and the [classname]#GridDragEndEvent# when the drag has ended, either in a drop or a cancel.
@@ -195,9 +196,11 @@ dragSource addGridDragEndListener(event -> {
 });
 ----
 
-=== Grid Drop Target
+The dragged rows can be accessed from both events using the `getDraggedItems()` method.
 
-To make a Grid component's rows accept a drop event, apply the [classname]#GridDropTarget# extension to the component. When creating the extension you need to define the drop mode.
+=== Grid as a Drop Target
+
+To make a Grid component's rows accept a drop event, apply the [classname]#GridDropTarget# extension to the component. When creating the extension, you need to specify where the transferred data can be dropped on.
 
 [source,java]
 ----
@@ -210,12 +213,12 @@ dropTarget.setDropEffect(DropEffect.MOVE);
 
 The _drop mode_ specifies the behaviour of the row when an element is dragged over or dropped onto it. Use `DropMode.ON_TOP` when you want to drop elements on top of a row and `DropMode.BETWEEN` when you want to drop elements between rows.
 
-The [classname]#GridDropEvent# is fired when an element is dropped onto a row or between rows.
+The [classname]#GridDropEvent# is fired when data is dropped onto one of the Grid's rows.
 
 [source,java]
 ----
 dropTarget.addGridDropListener(event -> {
-    // Accepting dragged items from another Grid
+    // Accepting dragged items from another Grid in the same UI
     event.getDragSourceExtension().ifPresent(source -> {
         if (source instanceof GridDragSource) {
             // Get the target Grid's items
