--- a/documentation/portal/portal-liferay.asciidoc
+++ b/documentation/portal/portal-liferay.asciidoc
@@ -1,31 +1,32 @@
 ---
 title: Developing Vaadin Portlets for Liferay
-order: 3
+order: 4
 layout: page
 ---
 
 [[portal.liferay]]
 = Developing Vaadin Portlets for Liferay
 
-*_This section has not yet been updated for Vaadin Framework 8._*
-
 A Vaadin portlet requires resources such as the server-side Vaadin libraries, a
-theme, and a widget set. You have two basic ways to deploy these: either
-globally in Liferay, so that the resources are shared between all Vaadin
-portlets, or as self-contained WARs, where each portlet carries their own
-resources.
+theme, and a widget set. You have three basic ways to deploy these: either
+globally in Liferay so that the resources are shared between all Vaadin
+portlets, as self-contained WARs where each portlet carries their own
+resources or as OSGi bundles in Liferay 7.
 
-The self-contained way is easier and more flexible to start with, as the
-different portlets may have different versions of the resources. Currently, the
-latest Maven archetypes support the self-contained portlets, while with portlets
-created with the Vaadin Plugin for Eclipse only support globally deployed
-resources.
+For Liferay 7 and OSGi portlets, see <<dummy/../../../framework/portal/portal-osgi#portal.osgi,"OSGi Portlets on Liferay 7">>. This is the recommended approach when using Vaadin 8.1 or later and Liferay 7.
+Currently, the latest Maven archetype supports the OSGi approach.
 
-Using shared resources is more efficient when you have multiple Vaadin portlets
-on the same page, as they can share the common resources. However, they must use
-exactly same Vaadin version. This is recommended for production environments,
-where you can even serve the theme and widget set from a front-end server. You
-can install the shared resources as described in <<portal.liferay.install>>.
+The material below applies mostly to non-OSGi portlets.
+
+== Developing Vaadin Portlets for Liferay 6.2
+
+In non-OSGi environments, the self-contained approach to static resources is
+easier and more flexible, as the different portlets may have different
+versions of the resources.
+
+Using shared resources is not recommended as it forces all portlets on a page
+to use the same Vaadin version and resources. If using this approach, you can
+install the shared resources as described in <<portal.liferay.install>>.
 
 At the time of writing, the latest Liferay release 6.2 is bundled with a version
 of Vaadin release 6. If you want to use Vaadin 7 portlets with shared resources,
